--- a/ThinkWhat/Modules/Controllers/App/Settings/SettingsView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Settings/SettingsView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,6 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsView" customModule="ThinkWhat" customModuleProvider="target">
             <connections>
+                <outlet property="card" destination="rZI-3R-6zP" id="hDW-a6-yO7"/>
+                <outlet property="cardShadow" destination="1Xp-Vl-7xd" id="ozv-X8-Vc1"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="qPL-Ir-YKz"/>
             </connections>
         </placeholder>
@@ -18,14 +20,49 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uWz-vL-QHb">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Xp-Vl-7xd">
+                            <rect key="frame" x="10" y="10" width="394" height="798"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rZI-3R-6zP">
+                            <rect key="frame" x="10" y="10" width="394" height="798"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="1Xp-Vl-7xd" firstAttribute="width" secondItem="rZI-3R-6zP" secondAttribute="width" id="0jw-3q-rAd"/>
+                        <constraint firstItem="1Xp-Vl-7xd" firstAttribute="height" secondItem="rZI-3R-6zP" secondAttribute="height" id="Bmg-Ed-Mwx"/>
+                        <constraint firstAttribute="bottom" secondItem="rZI-3R-6zP" secondAttribute="bottom" constant="10" id="cTQ-VR-GM2"/>
+                        <constraint firstItem="rZI-3R-6zP" firstAttribute="leading" secondItem="uWz-vL-QHb" secondAttribute="leading" constant="10" id="f0W-nK-YB1"/>
+                        <constraint firstAttribute="trailing" secondItem="rZI-3R-6zP" secondAttribute="trailing" constant="10" id="gbw-Ee-VVM"/>
+                        <constraint firstItem="1Xp-Vl-7xd" firstAttribute="centerY" secondItem="rZI-3R-6zP" secondAttribute="centerY" id="kp0-CR-s0U"/>
+                        <constraint firstItem="1Xp-Vl-7xd" firstAttribute="centerX" secondItem="rZI-3R-6zP" secondAttribute="centerX" id="mif-3q-pSN"/>
+                        <constraint firstItem="rZI-3R-6zP" firstAttribute="top" secondItem="uWz-vL-QHb" secondAttribute="top" constant="10" id="tD5-Lj-6HL"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemPurpleColor"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="uWz-vL-QHb" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="28e-2c-0yh"/>
+                <constraint firstItem="uWz-vL-QHb" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="3nt-2U-XFc"/>
+                <constraint firstItem="uWz-vL-QHb" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="hbY-QF-g9H"/>
+                <constraint firstItem="uWz-vL-QHb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="qqW-QX-VgP"/>
+            </constraints>
             <point key="canvasLocation" x="139" y="82"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemPurpleColor">
-            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
